# config/routes.rb
@@ -9,6 +9,9 @@ Rails.application.routes.draw do
         get ":studio_slug/:wedding_slug", to: "bootstraps#show"
         get ":studio_slug/:wedding_slug/ceremonies", to: "ceremonies#index"
         get ":studio_slug/:wedding_slug/ceremonies/:ceremony_slug/photos", to: "photos#index"
+        get ":studio_slug/:wedding_slug/photos/:photo_id/download", to: "downloads#download_photo"
+        post ":studio_slug/:wedding_slug/downloads", to: "downloads#create"
+        get ":studio_slug/:wedding_slug/downloads/:id", to: "downloads#show"
         post ":studio_slug/:wedding_slug/photos/:photo_id/like", to: "likes#create"
         delete ":studio_slug/:wedding_slug/photos/:photo_id/like", to: "likes#destroy"
         get ":studio_slug/:wedding_slug/likes", to: "likes#index"
